--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "hamburgers": "^1.1.3",
-    "jest": "^23.6.0",
     "massive": "^5.4.0",
     "moment": "^2.22.2",
     "react": "^16.5.1",
@@ -48,5 +47,8 @@
       "src/*",
       "public/*"
     ]
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
